Added cards and text shadowing

--- a/about.html
+++ b/about.html
@@ -23,7 +23,15 @@
     <strong>Racool_studio on Freepik</strong><br>
     <strong>Freepik</strong>
      </p>
-
-
   </body>
+
+
+<!--Footer-->
+  <footer>
+    <!--copyright-->
+    <p><strong>&copy;  2024 Created by:  Dani Hoskins <img src="hearts.png" alt="hearts" class="hearts"> Email: <a href="mailto:hoskins.dannala@gmail.com">hoskins.dannala@gmail.com</a></strong></p>
+      </footer>
+
+
+
 </html>
