--- a/index.html
+++ b/index.html
@@ -18,8 +18,35 @@
     <br>of 
     <br>Culinary Vocations</h1>
 
+      <h3>Featured Culinary Artists</h3>
+
       <!----Navigation Bar------------>
       <nav> </nav>
+    <div id="allCards">
+        <!-------Verneal's Card---------->
+        <div class="card">
+          <div class="vc-container"> 
+            <h4><b>Chef Verny Chillz</b></h4>
+              <h6>Owner of Chillz Greenz & Thingz</h6>
+          </div>  
+          </div>
+          <br><br>
+         <!------Faneshia's Card--------->
+         <div class="card2">
+          <div class="fh-container"> 
+            <h4><b>Chef Faneshia</b></h4>
+          </div>  
+          </div>
+          <br><br>
+        <!------Monique's Card-----------> 
+        <div class="card3">
+          <div class="mm-container"> 
+            <h4><b>Confectioner Monique</b></h4>
+              
+          </div>  
+          </div>
+        </div>
+
 
   </body>
 
