--- a/VLC.html
+++ b/VLC.html
@@ -5,10 +5,22 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Chef Verny Chillz</title>
      <link rel="stylesheet" type="text/css" href="VLC.css">
+     <!----Font style for page---->
+    <link href="https://fonts.cdnfonts.com/css/apple-chancery" rel="stylesheet">
     </head>
   <body>
-    
+    <h1>Chillz Greenz & Thingz</h1>
+      <h2>Curated by Chef & Entrepeneur Verneal Childress</h2>
+    <!---Image in right corner--->
+    <img src="VLC2.jpg" alt="VLC pic" style="width: 10%">
+      <br><br><br><br><br><br>
+      <!-----Place for bio-------->
+    <aside> 
+      <h1> About the Chef</h1>
+      <p>Bio Here</p>
 
+      <p>Website and socials here  </p>
+    </aside>
 
   </body>
 </html>
