--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1>The Visage
     <br>of 
     <br>Culinary Vocations</h1>
-
+      <br>
       <h3>Featured Culinary Artists</h3>
 
       <!----Navigation Bar------------>
@@ -26,6 +26,7 @@
         <!-------Verneal's Card---------->
         <div class="card">
           <div class="vc-container"> 
+          <img src="VLC2.jpg" alt="VLC pic" style="width:100%">
             <h4><b>Chef Verny Chillz</b></h4>
               <h6>Owner of Chillz Greenz & Thingz</h6>
           </div>  
@@ -35,6 +36,7 @@
          <div class="card2">
           <div class="fh-container"> 
             <h4><b>Chef Faneshia</b></h4>
+            <h6>Flavour Fete By Fe</h6>
           </div>  
           </div>
           <br><br>
@@ -50,10 +52,13 @@
 
   </body>
 
+
+<br><br><br><br><br>
   <!--Footer-->
   <footer>
     <!--copyright-->
     <p><strong>&copy;  2024 Created by:  Dani Hoskins <img src="hearts.png" alt="hearts" class="hearts"> Email: <a href="mailto:hoskins.dannala@gmail.com">hoskins.dannala@gmail.com</a></strong></p>
+    
       </footer>
 
 
