--- a/FAH.html
+++ b/FAH.html
@@ -7,11 +7,12 @@
      <link rel="stylesheet" type="text/css" href="FAH.css">
     </head>
   <body>
-    <h1>Chef Faneshia</h1><br>
-        <h3>Owner of Flavour Fete</h3>
+    <h1>Chef Faneshia</h1>
+        <h2>Owner of Flavour Fete</h2>
     <!---Image in right corner--->
-            <img src="VLC2.jpg" alt="VLC pic" style="width: 10%">
-      <br><br><br><br><br><br>
+            <img src="FAH.jpg" alt="FAH pic" style="width: 20%">
+      <br><br><br><br><br><br><br>
+      <br><br>
 <!-----Place for bio-------->
     <aside> 
       <h1> About the Chef</h1>
