--- a/VLC.html
+++ b/VLC.html
@@ -10,16 +10,17 @@
     </head>
   <body>
     <h1>Chillz Greenz & Thingz</h1>
-      <h2>Curated by Chef & Entrepeneur Verneal Childress</h2>
+      <h2>Curated by Entrepeneur<br>&<br>Chef Verneal Childress</h2>
     <!---Image in right corner--->
     <img src="VLC2.jpg" alt="VLC pic" style="width: 10%">
-      <br><br><br><br><br><br>
+      <br><br><br><br><br>
       <!-----Place for bio-------->
     <aside> 
       <h1> About the Chef</h1>
       <p>Bio Here</p>
 
-      <p>Website and socials here  </p>
+      <p>Website and socials here</p>
+
     </aside>
 
   </body>
