--- a/about.html
+++ b/about.html
@@ -8,19 +8,42 @@
     <link href="https://fonts.cdnfonts.com/css/apple-chancery" rel="stylesheet">
     </head>
   <body>
+   <!----Navigation Bar------------>
+      <section class="p-menu1">
+        <nav id="navbar" class="navigation" role="navigation">
+          <input id="toggle1" type="checkbox" />
+          <label class="hamburger1" for="toggle1">
+            <div class="top"></div>
+            <div class="meat"></div>
+            <div class="bottom"></div>
+          </label>
+        
+          <nav class="menu1">
+            <a class="link1" href="index.html">Home</a>
+            <a class="link1" href="VLC.html">Chef Verny Chillz</a>
+            <a class="link1" href="FAH.html">Chef Faneshia Hoskins</a>
+            <a class="link1" href="MM.html">Confectioner Monique Murray</a>
+            <a class="link1" href="about.html">Special Thanks</a>
+          </nav>
+      </nav>
+    </section>
+
     <h1>Special Thanks</p>
-    <br><br><br>
+    <br>
     
     <!-----Music Stylings----->
 
-
-    <p><u>Music stylings by:</u><br><strong>GodPack</strong><br>
+    <div class="card4">
+        <div class="gp-container">
+            <p><u>Music stylings by:</u><br><strong>GodPack</strong><br><br><br>
+      <img src="God Pack.jpg" alt="GP pic" style="width:80%"> <br>
        Spotify:   <br>
        Instagram:  <br>
        Youtube:    <br>         
                                     </p>
+      </div></div>
     <!----Images-------------->                                    
-    <br>
+    <br><br>
     <p><u>Images provided by:</u><br>
     <strong>Racool_studio on Freepik</strong><br>
     <strong>Freepik</strong>
