--- a/index.html
+++ b/index.html
@@ -37,7 +37,27 @@
     <h1>The Visage
     <br>of 
     <br>Culinary Vocations</h1>
-      <br>
+  <!-----Search bar for recipes------>
+    
+<div class="recipe-container">
+  <div class="meal-wrapper">
+   <h2 class="title">
+        Find what you love or find something new!
+      </h2>
+    <div class="meal-search-box">
+      <input type="What do you want to create?" class="search-box" 
+    placeholder="Enter an ingredient" id="search-input"/>
+      <button type="Explore" class="search-btn" id="search-btn">
+          Explore!</button>
+
+
+       </div>
+    </div>
+</div>
+
+
+
+      <br><br><br><br>
       <h3>Featured Culinary Artists</h3>
 
   <!--------------All Cards------------->      
@@ -47,7 +67,7 @@
           <div class="vc-container"> 
           <img src="VLC3.jpg" alt="VLC pic" style="width:100%">
             <h4><b>Chef Verny Chillz</b></h4>
-            <!--  <h5>Owner of Chillz Greenz & Thingz</h5>--->
+            <blockquote> </blockquote>
           </div>  
           </div>
          <!------Faneshia's Card--------->
@@ -71,6 +91,14 @@
 
 <!------JS Page------------->
      <script type="text/javascript" src="main.js"></script>
+
+    <h3>
+    <blockquote> If it is good, Eat it!
+    <cite>-Verneal Childress</cite>
+    </blockquote>
+    </h3>
+
+
   </body>
 
 
