--- a/index.html
+++ b/index.html
@@ -38,26 +38,25 @@
     <br>of 
     <br>Culinary Vocations</h1>
   <!-----Search bar for recipes------>
-    
+    <br><br><br><br>
 <div class="recipe-container">
   <div class="meal-wrapper">
    <h2 class="title">
         Find what you love or find something new!
       </h2>
+      <br><br><br>
     <div class="meal-search-box">
-      <input type="What do you want to create?" class="search-box" 
+      <input type="text" class="search-box" 
     placeholder="Enter an ingredient" id="search-input"/>
-      <button type="Explore" class="search-btn" id="search-btn">
+      <button type="submit" class="search-btn" id="search-btn">
           Explore!</button>
-
-
        </div>
     </div>
 </div>
 
 
 
-      <br><br><br><br>
+      <br><br>
       <h3>Featured Culinary Artists</h3>
 
   <!--------------All Cards------------->      
@@ -67,7 +66,6 @@
           <div class="vc-container"> 
           <img src="VLC3.jpg" alt="VLC pic" style="width:100%">
             <h4><b>Chef Verny Chillz</b></h4>
-            <blockquote> </blockquote>
           </div>  
           </div>
          <!------Faneshia's Card--------->
@@ -88,13 +86,19 @@
           </div>  
           </div>
         </div>
-
+<br>
 <!------JS Page------------->
      <script type="text/javascript" src="main.js"></script>
 
     <h3>
-    <blockquote> If it is good, Eat it!
-    <cite>-Verneal Childress</cite>
+
+    <blockquote> Hunger is the best sauce in the world.
+    <cite><br> - 
+    Miguel de Cervantes in Part II, Chapter V of Don Quixote, published in 1615</cite>
+    </blockquote>
+
+    <blockquote> Come on and eat before the food gets cold!
+    <cite> - Verneal Childress</cite>
     </blockquote>
     </h3>
 
@@ -102,7 +106,7 @@
   </body>
 
 
-<br><br><br><br><br>
+<br><br>
   <!--Footer-->
   <footer>
     <!--copyright-->
